<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_gizlilik">

        <CheckBoxPreference
            android:key="PREF_OTOMATIK_BASLAT"
            android:title="@string/pref_otomatik_baslat_title"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="PREF_KONUM_GONDER"
            android:title="@string/pref_konum_bilgimi_gonder_title"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_uyarilar">

        <CheckBoxPreference
            android:key="PREF_ARKADAS_UYARI"
            android:title="@string/pref_arkadas_uyari_title"
            android:defaultValue="true"/>

        <ListPreference
            android:key="PREF_YAKINLIK_OLCUSU"
            android:title="@string/pref_yakinlik_title"
            android:summary="@string/pref_yakinlik_summary"
            android:defaultValue="1"
            android:dialogTitle="@string/pref_yakinlik_title"
            android:entries="@array/yakinlik_olcusu"
            android:entryValues="@array/yakinlik_olcusu_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_tonlar">

        <RingtonePreference
            android:key="PREF_BILDIRIM_TONU"
            android:title="@string/pref_bildirim_tonu_title"
            android:summary="@string/pref_bildirim_tonu_summary"
            android:showDefault="true"
            android:showSilent="true"
            android:ringtoneType="notification"/>

    </PreferenceCategory>

</PreferenceScreen>